--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "apiratelimiterpackage",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "It can be used seemlessly for all free/subscribed api calls untill it's api limit reached  ",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "API_RATE",
-    "LIMITER"
+    "Api Rate Limiter"
   ],
   "author": "LOKESH BANDI",
   "license": "ISC",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.24.7",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
